refactor: clean up unused imports and improve assertion readability in tests